--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,25 +69,32 @@ ul {
   
   li {
     line-height: 1.5;
-    text-indent: -30px;
-    padding: 8px 0 8px 30px;
+    padding: 8px 0px;
   }
   
-  .check:before{
-    float: left;
-    display: block;
-    content: '\2713';
-    color: rgb(31, 168, 51);
-    margin: 0 30px 0 0;
+.check{
+    display: inline-block;
+    color: rgb(31, 168, 51);  
+    border: 1px solid rgb(31, 168, 51);
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
   }
-  .cross:before{
-    float: left;
-    display: block;
-    content: '\2717';
-    color: red;
-    margin: 0 30px 0 0;
-  }
-
+.cross{
+    display: inline-block;
+    color: red;  
+    border: 1px solid red;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+}
+  
 .square{
     padding: 6px 10px;
     border-radius: 10px;
