--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,8 +25,15 @@ header{
 .container{
     max-width: 1200px;
     background-color: white;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     margin: 0 auto;
+}
+
+.top{
+    border-radius: 5px 5px 0px 0px;
+}
+.bottom{
+    border-radius: 0px 0px 5px 5px;
 }
 
 nav{
@@ -83,7 +90,7 @@ ul {
     height: 20px;
     width: 20px;
     text-align: center;
-    line-height: 20px;
+    line-height: 19px;
     font-size: 12px;
   }
 .cross{
@@ -94,7 +101,7 @@ ul {
     height: 20px;
     width: 20px;
     text-align: center;
-    line-height: 20px;
+    line-height: 18px;
     font-size: 12px;
 }
   
